Fix mis-aligned cancel icon on apps details page

--- a/css/component.css
+++ b/css/component.css
@@ -175,7 +175,6 @@ a:hover {
 	z-index: 100;
 	opacity: 0;
 	pointer-events: none;
-        font-size:0.5em;
 }
 
 bl-icon-cancel-circle:before {
