--- a/css/pyro.css
+++ b/css/pyro.css
@@ -14,6 +14,10 @@ height: 150px;
 
 li,ul {
   list-style-type: none;
-  display: inline;
+}
+
+.bl-icon-cancel-circle:before {
+font-size: 2em;
+
 }
 
